--- a/PersofinDesktop/PersofinDesktop.csproj
+++ b/PersofinDesktop/PersofinDesktop.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="iNKORE.UI.WPF.Modern" Version="0.10.0" />
+    <PackageReference Include="LiteDB" Version="5.0.21" />
   </ItemGroup>
 
 </Project>
