--- a/PersofinDesktop/PersofinDesktop.csproj
+++ b/PersofinDesktop/PersofinDesktop.csproj
@@ -13,4 +13,12 @@
     <PackageReference Include="LiteDB" Version="5.0.21" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="View\Pages\Spendings\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
 </Project>
